Removed usused VppPollOperDataImpl.updateOperational() return value
Change-Id: I6eaefd0448367abdc5774d931cb22caf73166662
Signed-off-by: Marek Gradzki <mgradzki@cisco.com>